--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "Angular 1.6",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -p",
-    "watch": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production",
+    "watch": "webpack --watch"
   },
   "author": "Evgeniy Borzunov",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "path": "^0.12.7",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "css-loader": "^0.28.11",
