--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "angular": "^1.7.2",
+    "angular-material": "^1.1.10",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "style-loader": "^0.21.0",
